<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- ~~~~ TITLE ~~~~ -->

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <!-- ~~~~ USERNAME ~~~~ -->

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" 
        
        android:layout_below="@id/registerTxt"/>

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        
        android:layout_below="@id/usernameTxt"/>
    
    <!-- ~~~~ EMAIL ~~~~ -->

    <TextView
        android:id="@+id/emailTxt"
        android:layout_marginTop="15dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        
        android:layout_below="@id/registerUsername"/>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" 
        
        android:layout_below="@id/emailTxt"/>

    <!-- ~~~~ PASSWORD ~~~~ -->

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/password" 
        
        android:layout_below="@id/registerEmail"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" 
        
        android:layout_below="@id/passwordTxt"/>

    <!-- ~~~~ ERROR ~~~~ -->

    <TextView
        android:id="@+id/registerError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold"
        android:visibility="gone" 
        
        android:layout_below="@id/registerPassword"/>

    <!-- ~~~~ REGISTER ~~~~ -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/register" 
        
        android:layout_below="@id/registerError"/>

    <!-- ~~~~ LINK TO LOGIN SCREEN ~~~~ -->

    <Button
        android:id="@+id/btnLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/loginNow"
        android:textColor="#21dbd4"
        android:textStyle="bold" 
        
        android:layout_below="@id/btnRegister"/>

</RelativeLayout>