<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- ~~~~ TITLE ~~~~ -->

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <!-- ~~~~ USERNAME ~~~~ -->
    
    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" 
        
        android:layout_below="@id/loginTxt"/>

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        
        android:layout_below="@id/usernameTxt"/>

    <!-- ~~~~ PASSWORD ~~~~ -->

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/password" 
        
        android:layout_below="@id/loginUsername"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" 
        
        android:layout_below="@id/passwordTxt"/>

    <!-- ~~~~ ERROR ~~~~ -->

    <TextView
        android:id="@+id/loginError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold"
        android:visibility="gone" 
        
        android:layout_below="@id/loginPassword"/>

    <!-- ~~~~ LOGIN ~~~~ -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/login" 
        
        android:layout_below="@id/loginError"/>

    <!-- ~~~~ LINK TO REGISTRATION SCREEN ~~~~ -->

    <Button
        android:id="@+id/btnRegisterScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/registerNow"
        android:textColor="#21dbd4"
        android:textStyle="bold" 
        
        android:layout_below="@id/btnLogin"/>

</RelativeLayout>