<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csci567.scavengerhunt.ProfileActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/statsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourStats"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/statsLabel"
        android:layout_marginTop="6dp" >

        <TableRow
            android:id="@+id/tableRow1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/levelLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/xpToNextLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xpToLevelUp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPoints"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalCollLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCollected"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalDroplbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalDropped"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableDatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tableLabels"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/tableLabels" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/levelData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/xpToNextData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalPointsData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalCollData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/totalDropData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignLeft="@+id/tableLabels"
        android:layout_below="@+id/tableLabels"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:text="" />

    <TextView
        android:id="@+id/boardsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/separator"
        android:layout_below="@+id/separator"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboards"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/leaderboardsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/boardsLbl" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/boardsLbl"
        android:layout_below="@+id/leaderboardsSpinner"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TableLayout
            android:id="@+id/leaderboardsUsernameTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="0.5" >
        </TableLayout>

        <TableLayout
            android:id="@+id/leaderboardsDataTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="0.5" >
        </TableLayout>
    </LinearLayout>

</RelativeLayout>